--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             <div class="color green" id="green">4</div>
         </div>
     </div>
-    <script src="SimonSays.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
